Opens ticket reservation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dahl-logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -733,6 +733,10 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Sponsors</h2>
+          <p>Support the cause and be displayed here and at the event.</p>
+          <div class="text-center">
+            <a href="https://www.givergy.us/flight93heroesgala/?controller=tickets" class="btn">Sponsorships</a>
+          </div>
         </div>
 
         <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
@@ -866,7 +870,7 @@
 
     </section>--><!-- End  F.A.Q Section -->
 
-    <!-- ======= Subscribe Section ======= -->
+    <!-- ======= Subscribe Section =======
     <section id="subscribe">
       <div class="container" data-aos="zoom-in">
         <div class="section-header">
@@ -884,7 +888,7 @@
         </form>
 
       </div>
-    </section><!-- End Subscribe Section -->
+    </section> End Subscribe Section -->
 
     <!-- ======= Buy Ticket Section ======= -->
     <section id="buy-tickets" class="section-with-bg">
@@ -892,16 +896,16 @@
 
         <div class="section-header">
           <h2>Reserve Tickets</h2>
-          <h3 style="text-align:center;">Ticket Sales will be available here soon. Thank you for your patience.</h3>
-          <p>Purchase your tickets for the in-person event, or access the event virtually for a small donation. <br>The event will last until 10 PM, and the Gaylord is beautiful, so as a service, you can book a hotel room directly.</p>
+          <!--<h3 style="text-align:center;"></h3>-->
+          <p>Purchase your tickets for the in-person event, or access the event virtually for a small donation. <br>The event will last until 10 PM. <a href="#">Book a hotel room here.</a></p>
         </div>
 
-        <!--<div class="row">
+        <div class="row">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">Digital Access</h5>
-                <h6 class="card-price text-center">$0.93+ Donation</h6>
+                <h6 class="card-price text-center">Donate $9.30+</h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
@@ -909,11 +913,11 @@
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Silent Auction</li>
                   <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>In-Person Access</li>
                   <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Live Final Auction</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Hotel Room</li>
+                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Reserved VIP Table</li>
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <a href="https://www.dahlfund.org/donate/" class="btn">Donate Today</a>
+                  <a href="https://www.givergy.us/flight93heroesgala/?controller=tickets" class="btn">Donate Today</a>
                 </div>
               </div>
             </div>
@@ -930,39 +934,38 @@
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>In-Person Ticket</li>
                   <li><span class="fa fa-li"><i class="fa fa-check"></i></span>Live Final Auction</li>
                   <li><span class="fa fa-li"><i class="fa fa-check"></i></span>Dinner</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Hotel Room</li>
+                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Reserved VIP Table</li>
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="pro-access">Reserve Now</button>
+                  <a type="button" class="btn" data-bs-toggle="modal" href='https://www.givergy.us/flight93heroesgala/?controller=tickets'>Reserve Now</a>
                 </div>
               </div>
             </div>
-          </div>-->
-          <!-- Pro Tier 
+          </div>
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">Event Ticket + Hotel Room</h5>
-                <h6 class="card-price text-center">$350</h6>
+                <h5 class="card-title text-muted text-uppercase text-center">Table for Ten</h5>
+                <h6 class="card-price text-center">$1,700</h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Silent Auction</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>In-Person Ticket</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>TEN In-Person Tickets</li>
                   <li><span class="fa fa-li"><i class="fa fa-check"></i></span>Live Final Auction</li>
-                  <li><span class="fa fa-li"><i class="fa fa-check"></i></span>Dinner</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Hotel Room</li>
+                  <li><span class="fa fa-li"><i class="fa fa-check"></i></span>Dinners</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Reserved VIP Table</li>
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="premium-access">Reserve Now</button>
+                  <a type="button" class="btn" data-bs-toggle="modal" href='https://www.givergy.us/flight93heroesgala/?controller=tickets'>Reserve Now</a>
                 </div>
 
               </div>
             </div>
           </div>
-        </div>-->
+        </div>
 
       </div>
 
