--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <!--<li><a href="#gallery">Gallery</a></li>
           <li><a href="#supporters">Sponsors</a></li>-->
           <li><a href="#contact">Contact</a></li>
-          <li class="buy-tickets"><a href="#buy-tickets">Reserve Tickets</a></li>
+          <li class="buy-tickets"><a href="https://givergy.us/flight93heroesgala">Reserve Tickets</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -905,7 +905,7 @@
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">Digital Access</h5>
-                <h6 class="card-price text-center">Donate $9.30+</h6>
+                <h6 class="card-price text-center">Donate $10+</h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
@@ -926,7 +926,7 @@
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">Event Ticket</h5>
-                <h6 class="card-price text-center">$150</h6>
+                <h6 class="card-price text-center">$135-$150</h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
