--- a/index.html
+++ b/index.html
@@ -558,6 +558,7 @@
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8">
                 <h3 style="color:white">Gaylord Rockies Resort</h3>
+                <a href="https://book.passkey.com/go/CaptJasonDahl">Book a Room Here</a>
                 <p style="color:white">Just minutes from Denver International Airport and downtown Denver, Gaylord Rockies Resort & Convention Center provides access to many options for your stay in Colorado. It offers ample convention and outdoor space to support our gathering, along with many activities and amenities for your stay.</p>
               </div>
             </div>
@@ -897,7 +898,7 @@
         <div class="section-header">
           <h2>Reserve Tickets</h2>
           <!--<h3 style="text-align:center;"></h3>-->
-          <p>Purchase your tickets for the in-person event, or access the event virtually for a small donation. <br>The event will last until 10 PM. <a href="#">Book a hotel room here.</a></p>
+          <p>Purchase your tickets for the in-person event, or access the event virtually for a small donation. <br>The event will last until 10 PM. <a href="https://book.passkey.com/go/CaptJasonDahl">Book a hotel room here.</a></p>
         </div>
 
         <div class="row">
