--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <h3>Where</h3>
             <p>Gaylord Rockies Resort</p>
             <p>6700 North Gaylord Rockies Blvd<br>Aurora, Colorado 80019</p>
+            <p>Dress: Optionally Black Tie</p>
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
@@ -177,8 +178,8 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a href="#">Joseph Schmidt</a></h3>
-                <p>United Pilot and Violinist</p>
+                <h3><a href="https://twitter.com/i/status/1210072226499907584">Joseph Schmidt</a></h3>
+                <p>JetBlue Pilot and Violinist</p>
               </div>
             </div>
           </div>
@@ -188,6 +189,15 @@
               <div class="details">
                 <h3><a href="#">Norm Silver</a></h3>
                 <p>Auctioneer</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="400">
+              <img src="assets/img/speakers/7.jpg" alt="Speaker 3" class="img-fluid">
+              <div class="details">
+                <h3><a href="https://www.stefanoflavonimusic.com/bio">Stefano Flavoni</a></h3>
+                <p>San Francisco Orchestra Conductor and Pianist</p>
               </div>
             </div>
           </div>
@@ -316,7 +326,7 @@
                   <img src="assets/img/speakers/2.jpg" alt="silent auction">
                 </div>
                 <h4>Cocktails and Live Music</h4>
-                <p>Joseph Schmidt on Violin</p>
+                <p>Joseph Schmidt on Violin and Stefano Flavoni on Piano</p>
               </div>
             </div>
 
@@ -328,6 +338,7 @@
                 </div>
                 <h4>Gala Dinner <span></span></h4>
                 <p>Options Available With Ticket</p>
+                <p>Joseph Schmidt on Violin and Stefano Flavoni on Piano</p>
               </div>
             </div>
 
@@ -744,6 +755,12 @@
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
+              <a href="http://alpa.org"><img src="assets/img/supporters/0.png" class="img-fluid" alt=""></a>
+            </div>
+          </div>
+          
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
               <img src="assets/img/supporters/1.png" class="img-fluid" alt="">
             </div>
           </div>
@@ -769,12 +786,6 @@
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/supporters/5.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="supporter-logo">
-              <img src="assets/img/supporters/6.png" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -898,7 +909,9 @@
         <div class="section-header">
           <h2>Reserve Tickets</h2>
           <!--<h3 style="text-align:center;"></h3>-->
-          <p>Purchase your tickets for the in-person event, or access the event virtually for a small donation. <br>The event will last until 10 PM. <a href="https://book.passkey.com/go/CaptJasonDahl">Book a hotel room here.</a></p>
+          <p>Purchase your tickets for the in-person event, or access the event virtually for a small donation. <br>The event will last until 10 PM. Optional honorary dress code is black tie.
+            All revenue from ticket sales will be shared equally between the Dahl and Homer Foundations.
+            <a href="https://book.passkey.com/go/CaptJasonDahl">Book a hotel room here.</a></p>
         </div>
 
         <div class="row">
@@ -906,7 +919,7 @@
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">Digital Access</h5>
-                <h6 class="card-price text-center">Donate $10+</h6>
+                <h6 class="card-price text-center">$20</h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
@@ -918,7 +931,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <a href="https://www.givergy.us/flight93heroesgala/?controller=tickets" class="btn">Donate Today</a>
+                  <a href="https://www.givergy.us/flight93heroesgala/?controller=pledges" class="btn">Donate Today</a>
                 </div>
               </div>
             </div>
