--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="intro-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><span>Heroes</span> of <span>United Flight 93</span><br><span style="color:white;font-weight:bold;font-size:36pt;">20-Year Remembrance Gala</span></h1>
       <p class="mb-4 pb-0">Presented by Captain Jason Dahl Scholarship Fund<br><span>In Association with The LeRoy W. Homer Jr. Foundation</span></p>
-      <p class="mb-4 pb-0">Saturday, October 2, 2021 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
+      <p class="mb-4 pb-0">Saturday, August 20, 2022 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
       <!--<a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
 
       <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#buy-tickets" class="about-btn scrollto">Event Tickets</a><a href="#buy-tickets" class="about-btn scrollto">Donate</a></span>
@@ -94,7 +94,7 @@
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
-            <p>Saturday, October 2, 2021</p>
+            <p>Saturday, August 20, 2022</p>
             <p>5pm to 10pm</p>
           </div>
         </div>
@@ -1121,7 +1121,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <img src="assets/img/logo.png" alt="Dahl Gala Logo">
-            <p>Join Us October 2, 2021 at Gaylord Rockies Resort for a fundraising gala supporting the aviators of tomorrow.</p>
+            <p>Join Us August 20, 2022 at Gaylord Rockies Resort for a fundraising gala supporting the aviators of tomorrow.</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
@@ -1177,7 +1177,7 @@
 
   <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
-  <div id="covidalert" style="position:fixed; left:15vw; top:15vh; width:70vw; height:70vh; background-color:black; border-radius:25px;padding:20px;">
+  <!--<div id="covidalert" style="position:fixed; left:15vw; top:15vh; width:70vw; height:70vh; background-color:black; border-radius:25px;padding:20px;">
     <div style="position:relative; float:right; background-color:red;color:white; margin-right:-20px; margin-top:-20px; padding:8px;cursor:pointer;" onclick="$('#covidalert').hide();">Close</div>
     <h1 style="font-weight:bold; color:aliceblue;">
       The Captain Jason Dahl Scholarship Fund Board has made the difficult decision to postpone our Heroes of Flight 93 Remembrance Gala originally scheduled for October 2, 2021. 
@@ -1189,7 +1189,7 @@
       <br/>
       Our event will be rescheduled at a time when the potential health threats are reduced.  Thank you for your understanding and support.
     </p>
-  </div>
+  </div>-->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
