New Date messaging, remove ticketing

--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
     <div class="intro-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><span>Heroes</span> of <span>United Flight 93</span><br><span style="color:white;font-weight:bold;font-size:36pt;">20-Year Remembrance Gala</span></h1>
       <p class="mb-4 pb-0">Presented by Captain Jason Dahl Scholarship Fund<br><span>In Association with The LeRoy W. Homer Jr. Foundation</span></p>
-      <p class="mb-4 pb-0">Saturday, August 20, 2022 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
+      <p class="mb-4 pb-0" style="margin-top: 25px;"><span style="transform: rotate(-30deg); -webkit-transform: rotate(-30deg); display: inline-block; color:white;"><b style="text-decoration: solid; font-size: 25px;">New Date!</b></span> Saturday, August 20, 2022 - <a style="text-decoration:none" href="#venue">Gaylord Rockies Resort</a></p>
       <!--<a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
 
-      <span><a href="#about" class="about-btn scrollto">Learn More</a><a href="#buy-tickets" class="about-btn scrollto">Event Tickets</a><a href="#buy-tickets" class="about-btn scrollto">Donate</a></span>
+      <span>
+        <a href="#about" class="about-btn scrollto">Learn More</a>
+        <a href="#buy-tickets" class="about-btn scrollto">Tickets Coming Soon!</a>
+        <a href="#buy-tickets" class="about-btn scrollto">Donate</a>
+      </span>
       
     </div>
   </section><!-- End Intro Section -->
@@ -940,7 +944,7 @@
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">Event Ticket</h5>
-                <h6 class="card-price text-center">$135-$150</h6>
+                <h6 class="card-price text-center"></h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
@@ -952,7 +956,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <a type="button" class="btn" data-bs-toggle="modal" href='https://www.givergy.us/flight93heroesgala/?controller=tickets'>Reserve Now</a>
+                  <a type="button" class="btn" data-bs-toggle="modal" href='#'>Coming Soon</a>
                 </div>
               </div>
             </div>
@@ -961,7 +965,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">Table for Ten</h5>
-                <h6 class="card-price text-center">$1,700</h6>
+                <h6 class="card-price text-center"></h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
@@ -973,7 +977,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <a type="button" class="btn" data-bs-toggle="modal" href='https://www.givergy.us/flight93heroesgala/?controller=tickets'>Reserve Now</a>
+                  <a type="button" class="btn" data-bs-toggle="modal" href='#'>Coming Soon</a>
                 </div>
 
               </div>
