--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <span>
         <a href="#about" class="about-btn scrollto">Learn More</a>
-        <a href="#buy-tickets" class="about-btn scrollto">Tickets Coming Soon!</a>
+        <a href="#buy-tickets" class="about-btn scrollto">Reserve Tickets Today!</a>
         <a href="#buy-tickets" class="about-btn scrollto">Donate</a>
       </span>
       
@@ -114,9 +114,11 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6" style="text-align:center;">
             <img src="assets/img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
-            <a href="https://youtu.be/4AY1uVlgl-g" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-left:45%; margin-top:50px; height:50px; width:auto;"></a>
+            <span>Trailer: </span><a href="https://youtu.be/4AY1uVlgl-g" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"><img src="assets/img/play-button.jpg" style="margin-top:50px; height:50px; width:auto;"></a>
+            <br/>
+            <p>Or watch Heather Penney's interviews <a href="https://youtu.be/ISRRuqxa8TA" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true">with CBS</a> or <a href="https://youtu.be/ql4t9cyW_qQ" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true">with ABC</a></p>
           </div>
 
           <div class="col-md-6">
@@ -573,7 +575,7 @@
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8">
                 <h3 style="color:white">Gaylord Rockies Resort</h3>
-                <a href="https://book.passkey.com/go/CaptJasonDahl">Book a Room Here</a>
+                <a href="https://book.passkey.com/go/captianjason">Book a Room Here</a>
                 <p style="color:white">Just minutes from Denver International Airport and downtown Denver, Gaylord Rockies Resort & Convention Center provides access to many options for your stay in Colorado. It offers ample convention and outdoor space to support our gathering, along with many activities and amenities for your stay.</p>
               </div>
             </div>
@@ -944,7 +946,7 @@
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">Event Ticket</h5>
-                <h6 class="card-price text-center"></h6>
+                <h6 class="card-price text-center">$135-$150</h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
@@ -956,7 +958,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <a type="button" class="btn" data-bs-toggle="modal" href='#'>Coming Soon</a>
+                  <a type="button" class="btn" data-bs-toggle="modal" href='https://www.givergy.us/flight93heroesgala/?controller=tickets'>Reserve Tickets</a>
                 </div>
               </div>
             </div>
@@ -964,8 +966,8 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">Table for Ten</h5>
-                <h6 class="card-price text-center"></h6>
+                <h5 class="card-title text-muted text-uppercase text-center">VIP Table for Ten</h5>
+                <h6 class="card-price text-center">$1800</h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Support the Cause</li>
@@ -977,7 +979,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <a type="button" class="btn" data-bs-toggle="modal" href='#'>Coming Soon</a>
+                  <a type="button" class="btn" data-bs-toggle="modal" href='https://www.givergy.us/flight93heroesgala/?controller=tickets'>Reserve Tickets</a>
                 </div>
 
               </div>
