Updates second hotel link

--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
           <!--<h3 style="text-align:center;"></h3>-->
           <p>Purchase your tickets for the in-person event, or access the event virtually for a small donation. <br>The event will last until 10 PM. Optional honorary dress code is black tie.
             All revenue from ticket sales will be shared equally between the Dahl and Homer Foundations.
-            <a href="https://book.passkey.com/go/CaptJasonDahl">Book a hotel room here.</a><br/>Due to the postponement, ticketing will not be available until further notice.</p>
+            <a href="https://book.passkey.com/go/captianjason">Book a hotel room here.</a><br/>Due to the postponement, ticketing will not be available until further notice.</p>
         </div>
 
         <div class="row">
